--- a/Back-end/App.Dal.EF/App.Dal.EF.csproj
+++ b/Back-end/App.Dal.EF/App.Dal.EF.csproj
@@ -17,4 +17,8 @@
       <ProjectReference Include="..\App.Domain\App.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Repositories\" />
+    </ItemGroup>
+
 </Project>
