--- a/Back-end/App.Dal.EF/App.Dal.EF.csproj
+++ b/Back-end/App.Dal.EF/App.Dal.EF.csproj
@@ -14,6 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\App.Contracts.DAL\App.Contracts.DAL.csproj" />
+      <ProjectReference Include="..\App.Dal.DTO\App.Dal.DTO.csproj" />
       <ProjectReference Include="..\App.Domain\App.Domain.csproj" />
     </ItemGroup>
 
