--- a/Back-end/WebApp/WebApp.csproj
+++ b/Back-end/WebApp/WebApp.csproj
@@ -6,4 +6,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\App.BLL.DTO\App.BLL.DTO.csproj" />
+      <ProjectReference Include="..\App.DTO\App.DTO.csproj" />
+    </ItemGroup>
+
 </Project>
