first endpoint achieved

--- a/Back-end/WebApp/appsettings.json
+++ b/Back-end/WebApp/appsettings.json
@@ -1,4 +1,11 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=7890;Database=ToDoDatabase;Username=postgres;Password=postgres",
+    "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApp;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "WebAppIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
