--- a/Back-end/App.Dal.DTO/App.Dal.DTO.csproj
+++ b/Back-end/App.Dal.DTO/App.Dal.DTO.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="ee.BraixV1.Base.Contracts.Domain.www" Version="1.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\App.Resources\App.Resources.csproj" />
+    </ItemGroup>
+
 </Project>
